# Python_Project_Sanya_Katya_Fisya_Nekit

./: README.md
python_project/: package.xml  setup.cfg  setup.py
python_project/config/: ros_gz_bridge.yaml
python_project/launch/: bringup.launch.py
python_project/python_project/: control_node.py  lidar_logger.py  sensor_data_proc.py
python_project/urdf/: inertial.xacro  materials.xacro  robot_model.gazebo  robot_model.xacro  wheel.xacro
python_project/worlds/: simple.world
